<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/menu_cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_user"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_user"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/menu_favorites"
                android:icon="@drawable/ic_favorite_full"
                android:title="@string/favorites" />
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
