<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/leaf_green_top"
        android:theme="@style/Theme.Fruits_App.Toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:navigationIconTint="@color/white"
        app:title="@string/manage_fruit_title"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardSelectImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/bold_yellow_card"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/leaf_green_top"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/ivSelectedFruit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/fruit_image"
                    android:padding="16dp"
                    android:src="@drawable/ic_add" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tap_to_select_image"
                android:textColor="@color/leaf_green_top"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/leaf_green_top"
                app:hintTextColor="@color/leaf_green_top"
                app:boxBackgroundColor="#AAFFFFFF"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/leaf_green_top"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFruitName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fruit_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/leaf_green_top"
                app:hintTextColor="@color/leaf_green_top"
                app:boxBackgroundColor="#AAFFFFFF"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/leaf_green_top"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFruitPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price_e_g_1_99"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/leaf_green_top"
                app:hintTextColor="@color/leaf_green_top"
                app:boxBackgroundColor="#AAFFFFFF"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/leaf_green_top"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etScientificName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/scientific_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/leaf_green_top"
                app:hintTextColor="@color/leaf_green_top"
                app:boxBackgroundColor="#AAFFFFFF"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/leaf_green_top"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:minLines="3"
                    android:gravity="top"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/leaf_green_top"
                app:hintTextColor="@color/leaf_green_top"
                app:boxBackgroundColor="#AAFFFFFF"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/leaf_green_top"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHealthBenefits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/health_benefits"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSaveFruit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/leaf_green_top"
                android:text="@string/save_fruit"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="30dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>